--- a/shipping-and-delivery.html
+++ b/shipping-and-delivery.html
@@ -26,7 +26,7 @@
       <div class="flex items-center justify-between mb-8 pb-6 border-b border-gray-200">
         <div>
           <h2 class="text-2xl font-bold text-gray-900">Shipping & Delivery Policy</h2>
-          <p class="text-gray-600">Last Updated: April 20, 2025</p>
+          <p class="text-gray-600">Last Updated: Aug 8, 2025</p>
         </div>
         <div class="hidden md:block">
           <img src="./assets/Logo.png" alt="EazyNet Logo" class="h-12 w-auto opacity-80">
@@ -64,12 +64,25 @@
           <div class="bg-gray-50 rounded-xl p-6">
             <h3 class="text-xl font-semibold text-gray-900 mb-4 flex items-center">
               <span class="w-12 h-8 bg-blue-600 text-white rounded-full flex items-center justify-center text-sm font-bold mr-3">3</span>
-              Support & Activation
+              Delivery Timeline
             </h3>
             <p class="text-gray-700">
-              If you face activation issues, contact <a href="mailto:eazynettabmanager@gmail.com" class="text-blue-600 hover:text-blue-800 font-semibold">eazynettabmanager@gmail.com</a> for immediate assistance.
+              For International users, digital access is provided through secure online platforms and email delivery systems. For domestic users, access is delivered through registered digital delivery systems and email notifications. Digital access is provided within 0-7 days or as per the delivery date agreed at the time of order confirmation. <strong>Ankit Singh</strong> or <strong>EazyNet</strong> is not liable for any delay in delivery by third-party platforms or email services and only guarantees to provide access credentials within 0-7 days from the date of the order and payment or as per the delivery date agreed at the time of order confirmation. Delivery of all services will be to the email address provided by the user during registration.
             </p>
           </div>
+
+          <!-- Need Help Section -->
+          <div class="bg-gray-50 rounded-xl p-6">
+            <h3 class="text-xl font-semibold text-gray-900 mb-4 flex items-center">
+              <span class="w-12 h-8 bg-blue-600 text-white rounded-full flex items-center justify-center text-sm font-bold mr-3">5</span>
+              Need Help?
+            </h3>
+            <p class="text-gray-700">
+              For any issues in utilizing our services, you may contact our helpdesk on 
+              <a href="mailto:eazynettabmanager@gmail.com" class="text-blue-600 hover:text-blue-800 font-semibold">eazynettabmanager@gmail.com</a>
+            </p>
+          </div>
+
         </div>
       </div>
     </div>
